標示位置調整

--- a/product.html
+++ b/product.html
@@ -120,104 +120,104 @@
                 <div class="prevent-sign rounded-bottom" data-con="stage1">
                     <div class="prevent-sign-header">
                         <h6 class="prevent-sign-title">安全標示</h6>
-                        <div class="row px-4 gx-2">
-                            <div class="prevent-sign-item">
+                        <ul class="prevent-sign-list px-4">
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/safe.png" alt="加鎖存放並遠離兒童接觸" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">加鎖存放<br>並遠離兒童接觸</p>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </div>
                     <hr class="d-block d-xl-none">
                     <div class="prevent-sign-body">
                         <h6 class="prevent-sign-title">稀釋方式</h6>
-                        <div class="row px-4 gx-2 mb-4">
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                        <ul class="prevent-sign-list px-4 mb-4" data-con="max">
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution1.png" alt="穿戴呼吸防護具" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴呼吸防護具</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution2.png" alt="穿戴手套" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴手套</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution3.png" alt="穿戴眼睛防護" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴眼睛防護</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution4.png" alt="穿著橡膠靴" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著橡膠靴</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution5.png" alt="穿著全套衣" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著全套衣</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution6.png" alt="穿著圍裙" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著圍裙</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution7.png" alt="稀釋液態成品時" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">稀釋液態成品時</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution8.png" alt="調配乾式成品時" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">調配乾式成品時</p>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                         <h6 class="prevent-sign-title">施藥方式</h6>
-                        <div class="row px-4 gx-2 mb-4">
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                        <ul class="prevent-sign-list px-4 mb-4" data-con="max">
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/medicine1.png" alt="施用農藥時" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">施用農藥時</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution2.png" alt="穿戴手套" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴手套</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution3.png" alt="穿戴眼睛防護" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴眼睛防護</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution4.png" alt="穿著橡膠靴" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著橡膠靴</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/medicine2.png" alt="穿戴口鼻防護具" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴口鼻防護具</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/medicine3.png" alt="穿戴呼吸防護具" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿戴呼吸防護具</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution5.png" alt="穿著全套衣" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著全套衣</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl prevent-sign-item">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/dilution6.png" alt="穿著圍裙" class="prevent-sign-img">
                                 <p class="prevent-sign-txt">穿著圍裙</p>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                         <hr>
                         <h6 class="prevent-sign-title">其他標示</h6>
-                        <div class="row px-4 gx-2">
-                            <div class="col-6 col-sm-4 col-3 prevent-sign-item flex-lg-row">
+                        <ul class="prevent-sign-list px-4" data-con="mid">
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/others1.png" alt="使用後沖洗"
                                     class="prevent-sign-img ms-xl-3 me-2">
                                 <p class="prevent-sign-txt text-start">使用後沖洗</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-3 prevent-sign-item flex-lg-row">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/others2.png" alt="對動物危險/有害"
                                     class="prevent-sign-img ms-xl-3 me-2">
                                 <p class="prevent-sign-txt text-start">對動物危險/有害</p>
-                            </div>
-                            <div class="col-6 col-sm-4 col-6 prevent-sign-item flex-lg-row">
+                            </li>
+                            <li class="prevent-sign-item">
                                 <img src="./assets/images/others3.png" alt="對魚類危險/有害一不可汙染湖水、河川、池塘或溪流"
                                     class="prevent-sign-img ms-xl-3 me-2">
                                 <p class="prevent-sign-txt text-start">對魚類危險/有害一不可汙染湖水、河川、池塘或溪流</p>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
