--- a/search.html
+++ b/search.html
@@ -119,8 +119,8 @@
 			<span class="content-box-txt px-4 px-xl-5">※ 請選擇要防治的害物對象</span>
 		</h3>
 		<div class="content-box-body px-4 px-xl-5">
-			<ul class="row card-list align-items-stretch gx-3 gx-xl-4 pt-sm-5">
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+			<ul class="row card-list align-items-stretch gx-3 gx-xl-4 pt-md-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
@@ -133,7 +133,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
@@ -146,7 +146,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
@@ -159,7 +159,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
@@ -172,7 +172,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
@@ -185,7 +185,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
@@ -198,7 +198,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
@@ -211,7 +211,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-3 card-list-item mb-3 mb-sm-5">
+				<li class="col-6 col-md-4 col-lg-3 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
