顏色控制調整

--- a/product.html
+++ b/product.html
@@ -117,7 +117,7 @@
                 <h5 class="modal-subtitle mb-3">
                     <i class="bi bi-exclamation-square-fill me-1"></i> 危害防範標示
                 </h5>
-                <div class="prevent-sign rounded-bottom" data-con="stage1">
+                <div class="prevent-sign rounded-bottom js-prevent-sign">
                     <div class="prevent-sign-header">
                         <h6 class="prevent-sign-title">安全標示</h6>
                         <ul class="prevent-sign-list px-4">
@@ -300,7 +300,7 @@
                 IRAC 3A
             </p>
         </div>
-        <div class="side-info-container" data-bs-toggle="modal" data-bs-target="#sign-info">
+        <div class="side-info-container js-sign-toggler" data-bs-toggle="modal" data-bs-target="#sign-info" data-con="blue">
             <h5 class="side-menu-title mb-3">
                 <i class="bi bi-exclamation-diamond-fill me-2"></i> 危害標示
                 <button class="btn ms-auto primary-color py-0 px-2"><i class="bi bi-box-arrow-up-right"></i></button>
