--- a/product.html
+++ b/product.html
@@ -457,12 +457,13 @@
                 </ul>
             </div>
             <div class="tab-pane fade" id="product2" role="tabpanel" tabindex="0">
-                <table class="table-rwd table-striped">
+                <div class="table-responsive scrollbar">
+                <table class="table-rwd table-striped" style="min-width: 1060px;">
                     <thead>
                         <tr>
                             <th class="text-center" scope="col" width="45">項次</th>
                             <th class="text-center" scope="col" width="100">作物名稱</th>
-                            <th class="text-center" scope="col" width="100">病草害名稱</th>
+                            <th class="text-center" scope="col" width="120">病草害名稱</th>
                             <th class="text-center" scope="col" width="70">施用次數</th>
                             <th class="text-center" scope="col" width="130">每公頃用藥量</th>
                             <th class="text-center" scope="col" width="80">稀釋倍數</th>
@@ -477,7 +478,7 @@
                         <tr>
                             <td data-th="項次" scope="row">1</td>
                             <td data-th="作物名稱">十字花科包葉菜類</td>
-                            <td data-th="病草害名稱">葉部薊馬類</td>
+                            <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                             <td data-th="施用次數" class="text-center">2</td>
                             <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                             <td data-th="稀釋倍數">2000 倍</td>
@@ -490,7 +491,7 @@
                         <tr>
                             <td data-th="項次" scope="row">2</td>
                             <td data-th="作物名稱">十字花科包葉菜類</td>
-                            <td data-th="病草害名稱">葉部薊馬類</td>
+                            <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                             <td data-th="施用次數" class="text-center">2</td>
                             <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                             <td data-th="稀釋倍數">2000 倍</td>
@@ -503,7 +504,7 @@
                     <tr>
                         <td data-th="項次" scope="row">3</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -516,7 +517,7 @@
                     <tr>
                         <td data-th="項次" scope="row">4</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -529,7 +530,7 @@
                     <tr>
                         <td data-th="項次" scope="row">5</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -542,7 +543,7 @@
                     <tr>
                         <td data-th="項次" scope="row">6</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -555,7 +556,7 @@
                     <tr>
                         <td data-th="項次" scope="row">7</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -568,7 +569,7 @@
                     <tr>
                         <td data-th="項次" scope="row">8</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -581,7 +582,7 @@
                     <tr>
                         <td data-th="項次" scope="row">9</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -594,7 +595,7 @@
                     <tr>
                         <td data-th="項次" scope="row">10</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -608,7 +609,7 @@
                     <tr>
                         <td data-th="項次" scope="row">11</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -621,7 +622,7 @@
                     <tr>
                         <td data-th="項次" scope="row">12</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -634,7 +635,7 @@
                     <tr>
                         <td data-th="項次" scope="row">13</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -647,7 +648,7 @@
                     <tr>
                         <td data-th="項次" scope="row">14</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -660,7 +661,7 @@
                     <tr>
                         <td data-th="項次" scope="row">15</td>
                         <td data-th="作物名稱">十字花科包葉菜類</td>
-                        <td data-th="病草害名稱">葉部薊馬類</td>
+                        <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
                         <td data-th="施用次數" class="text-center">2</td>
                         <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                         <td data-th="稀釋倍數">2000 倍</td>
@@ -671,6 +672,7 @@
                         <td data-th="注意事項">施藥間隔 10 天</td>
                     </tr>
                 </table>
+                </div>
             </div>
             <div class="tab-pane fade" id="product3" role="tabpanel" tabindex="0">
                 <div class="info-box border-0 mb-4">
