--- a/product.html
+++ b/product.html
@@ -458,27 +458,27 @@
             </div>
             <div class="tab-pane fade" id="product2" role="tabpanel" tabindex="0">
                 <div class="table-responsive scrollbar">
-                <table class="table-rwd table-striped" style="min-width: 1060px;">
+                <table class="table-rwd table-striped" style="min-width: 1750px;">
                     <thead>
                         <tr>
                             <th class="text-center" scope="col" width="45">項次</th>
-                            <th class="text-center" scope="col" width="100">作物名稱</th>
+                            <th class="text-center" scope="col" width="180">作物名稱</th>
                             <th class="text-center" scope="col" width="120">病草害名稱</th>
                             <th class="text-center" scope="col" width="70">施用次數</th>
                             <th class="text-center" scope="col" width="130">每公頃用藥量</th>
                             <th class="text-center" scope="col" width="80">稀釋倍數</th>
-                            <th class="text-center" scope="col">使用時期</th>
-                            <th class="text-center" scope="col" width="70">施藥間隔</th>
+                            <th class="text-center" scope="col" width="180">使用時期</th>
+                            <th class="text-center" scope="col" width="90">施藥間隔</th>
                             <th class="text-center" scope="col" width="80">安全採收期</th>
-                            <th class="text-center" scope="col">備註</th>
-                            <th class="text-center" scope="col">注意事項</th>
+                            <th class="text-center" scope="col" width="360">備註</th>
+                            <th class="text-center" scope="col" width="360">注意事項</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td data-th="項次" scope="row">1</td>
-                            <td data-th="作物名稱">十字花科包葉菜類</td>
-                            <td data-th="病草害名稱" class="text-center">葉部薊馬類</td>
+                            <td data-th="作物名稱">十字花科包葉菜類菜類</td>
+                            <td data-th="病草害名稱" class="text-center">葉部薊馬類類</td>
                             <td data-th="施用次數" class="text-center">2</td>
                             <td data-th="每公頃使用用藥量" class="text-center">0.5-0.6 公升</td>
                             <td data-th="稀釋倍數">2000 倍</td>
