調整產品圖與產品資訊

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
-						<img src="./assets/images/no-pic.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/no-pic.png"></div>
 						<h4 class="card-list-title">勁功夫</h4>
 						<p class="card-list-txt">
 							24.7 (%) 賽洛寧<br>
@@ -349,7 +349,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
-						<img src="./assets/images/demo-p2.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/demo-p2.png"></div>
 						<div class="card-list-circle"></div>
 						<h4 class="card-list-title">剋歐</h4>
 						<p class="card-list-txt">
@@ -362,7 +362,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
-						<img src="./assets/images/demo-p3.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/demo-p3.png"></div>
 						<div class="card-list-circle"></div>
 						<h4 class="card-list-title">金-除豪</h4>
 						<p class="card-list-txt">
@@ -375,7 +375,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
-						<img src="./assets/images/demo-p1.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/test1.jpg"></div>
 						<div class="card-list-circle"></div>
 						<h4 class="card-list-title">勁功夫</h4>
 						<p class="card-list-txt">
@@ -388,7 +388,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
-						<img src="./assets/images/demo-p2.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/test2.jpg"></div>
 						<div class="card-list-circle"></div>
 						<h4 class="card-list-title">剋歐</h4>
 						<p class="card-list-txt">
@@ -401,7 +401,7 @@
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
-						<img src="./assets/images/demo-p3.png" class="card-list-img">
+						<div class="card-list-img"><img src="./assets/images/demo-p3.png"></div>
 						<div class="card-list-circle"></div>
 						<h4 class="card-list-title">金-除豪</h4>
 						<p class="card-list-txt">
